# flask-rent-a-car

./: .flaskenv  azure-pipelines.yml  pyproject.toml  rent-e-ria.py  requirements.txt
migrations-mssql/versions/: 0432b60bf493_initial_version.py  4b8b6033d1e4_models_added.py  56c467877a8a_stores_added.py  aadb3f2f44e9_vehicles_added.py  f6fa994fad37_tags_added.py
rent_a_car/: __init__.py  category.py  db.py  factory.py  home.py  make.py  model.py  nav.py  store.py  tag.py  user.py  vehicle.py
rent_a_car/models/: __init__.py  category.py  make.py  model.py  store.py  tag.py  user.py  vehicle.py
rent_a_car/schemas/: __init__.py  category.py  make.py  model.py  nested.py  store.py  tag.py  user.py  vehicle.py
rent_a_car/services/: __init__.py  base.py  category.py  make.py  model.py  store.py  tag.py  user.py  vehicle.py
rent_a_car/static/: scripts.js  styles.css
rent_a_car/templates/: base.html  home.html  macros.html
rent_a_car/templates/generic/: all.html  create.html  edit_form.html  info_table.html  list_table.html  tags.html  view.html
rent_a_car/templates/user/: auth.html  profile.html
rent_a_car/utils/: nav.py
